--- a/app/views/heros/index.html.erb
+++ b/app/views/heros/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Heros - Cadasilva Informática ltda</h1>
+<h1>Heros - Cadasilva Informática Ltda</h1>
 
 <div id="heros">
   <% @heros.each do |hero| %>
